fixed audio delay, added transparency to fish

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="game.js">
 
     </script>
+    <div>
     <button id="reset" onclick="reset()">RESET</button>
+    </div>
   </body>
 </html>
