fixed collision issue

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <script src="game.js">
+    <div>
+      <script src="game.js">
 
-    </script>
+      </script>
+    </div>
+    
+    
     <div>
     <button id="reset" onclick="reset()">RESET</button>
     </div>
