added padding on top

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <div class="game">
+  <div class="spacerTop">
   </div>
   <script src="game.js">
   </script>
@@ -24,7 +24,7 @@
         <div class="col-4">
           <h5>Use the arrow keys to catch jellyfish!</h5>
           <div class="row">
-            <div class="col">
+            <div class="col-3">
               <img class="img-fluid" src="images/keys.png">
             </div>
             <div class="col">
