--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
 
         </div>
         <div class="col-4">
-          <h5>Avoid Falling Patricks</h5>
-
+          <h5>Avoid Patrick</h5>
           <img src="images/cancelPat.png">
-
         </div>
 
       </div>
