spaced wallpaper with new logo

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       <div class="text no-gutters row ">
         <div class="col-4">
           <h5>Use the arrow keys to catch jellyfish!</h5>
+          <hr>
           <div class="row">
-            <div class="col-3">
+            <div class="col">
               <img class="img-fluid" src="images/keys.png">
             </div>
             <div class="col">
@@ -36,14 +37,14 @@
           </div>
         </div>
         <div class="col-4">
-          <h2>Spongebob's Jellyfishing Adventure</h2>
+          <h5 >High Scores</h5>
           <hr>
-          <h4 class="left">High Scores:</h4>
           <p class="left">Name: </p>
 
         </div>
         <div class="col-4">
           <h5>Avoid Patrick</h5>
+          <hr>
           <img src="images/cancelPat.png">
         </div>
 
@@ -51,7 +52,7 @@
     </div>
   </div>
   <div class="buttonDiv">
-    <button id="reset" onclick="reset()">PLAY</button>
+    <button id="reset" onclick="reset()"><img src="https://fontmeme.com/permalink/200517/6b83140a0f064fcc9f72fd56b9eabb20.png" alt="spongebob-squarepants-font" border="0"></a></button>
   </div>
 
 </body>
